--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 
 <html>
 <head>
- <title>BOO SERVER</title>
+ <title>BOO-BOO-BOO</title>
 </head>
 <body>
 <header><img src="/img/1.png" alt="LOGO YA"></header>
